# DAAgent

./: .gitignore  README.md  package-lock.json  pyproject.toml
app/: main.py
app/agents/: __init__.py  database_query_agent.py  general_answer_agent.py  intent_agent.py  orchestrator.py  planner_agent.py  plot_planning_agent.py  synthesizer_agent.py
app/api/: main.py  models.py  server.py
app/core/: __init__.py  agent_deps.py  auth.py  config.py  models.py  pack_loader.py  prompt_registry.py  schema_skills.py
app/db/: __init__.py  manager.py  schema.py
app/packs/: database_pack.yaml  iris_database.yaml
app/tools/: __init__.py  db_tool.py  schema_tool.py
app/utils/: __init__.py  clarification_handler.py  message_history.py  plot_generator.py  response_formatter.py  routing.py  session_manager.py  tracing.py
db/: database_manager.py  generate_data.py  loader.ipynb  sq-api_table_paavo_pxt_12f1.px.json  sq-api_table_paavo_pxt_12f4.px.json
db/data_loaders/: __init__.py  iris_loader.py  postal_code_loader.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: ChatInput.tsx  ChatSidebar.tsx  MessageBubble.tsx  PlotlyPlot.tsx  ResetButton.tsx  SqlQueryDisplay.tsx  VegaPlot.tsx
frontend/lib/: api.ts
scripts/: register_prompts.py  remove_prompt_versions.py
test/: test_orchestrator.py
